<package>
  <name>nodelet</name>
  <version>1.7.0</version>
  <description brief="nodelet base class and wrappers">
    The nodelet package is designed to provide a way to run multiple
    algorithms in the same process with zero copy transport between
    algorithms.  
    
    This package provides both the nodelet base class needed for
    implementing a nodelet, as well as the NodeletLoader class used
    for instantiating nodelets.
  </description>
  <author>Tully Foote</author>
  <author>Radu Bogdan Rusu</author>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/nodelet</url>

  <build_depend>bondcpp</build_depend>
  <build_depend>langs-dev</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>langs</run_depend>
  <run_depend>uuid</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lnodeletlib -luuid"/>
  </export>
</package>
