<package>
  <name>nodelet_core</name>
  <version>1.9.2</version>
  <description>Nodelet Core Metapackage</description>
  <maintainer email="esteve@osrfoundation.org">Esteve Fernandez</maintainer>
  <license>BSD</license>
  
  <url type="website">http://www.ros.org/wiki/nodelet_core</url>
  <url type="bugtracker">https://code.ros.org/trac/ros-pkg/query?component=common&amp;status=assigned&amp;status=new&amp;status=reopened</url>
  <url type="repository">https://github.com/ros/nodelet_core</url>
  
  <author>Tully Foote</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Old stack contents -->
  <run_depend>nodelet</run_depend>
  <run_depend>nodelet_topic_tools</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
