<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>nodelet_core</name>
  <version>1.9.14</version>
  <description>Nodelet Core Metapackage</description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/nodelet_core</url>
  <url type="bugtracker">https://github.com/ros/nodelet_core/issues</url>
  <url type="repository">https://github.com/ros/nodelet_core</url>

  <author>Tully Foote</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Old stack contents -->
  <exec_depend>nodelet</exec_depend>
  <exec_depend>nodelet_topic_tools</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
