<package>
  <name>nodelet_topic_tools</name>
  <version>1.9.3</version>
  <description>
    This package contains common nodelet tools such as a mux, demux and throttle.
  </description>
  <maintainer email="esteve@osrfoundation.org">Esteve Fernandez</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/nodelet_topic_tools</url>
  <author>Radu Bogdan Rusu</author>
  <author>Tully Foote</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
</package>
