<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>nodelet_topic_tools</name>
  <version>1.9.16</version>
  <description>
    This package contains common nodelet tools such as a mux, demux and throttle.
  </description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nodelet_topic_tools</url>
  <url type="bugtracker">https://github.com/ros/nodelet_core/issues</url>
  <url type="repository">https://github.com/ros/nodelet_core</url>
  <author>Radu Bogdan Rusu</author>
  <author>Tully Foote</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>dynamic_reconfigure</depend>

  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
</package>
