<package>
  <name>test_nodelet</name>
  <version>1.8.2</version>
  <description>
    A package for nodelet unit tests
  </description>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/test_nodelet</url>
  <author>Tully Foote</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/test_nodelet.xml"/>
  </export>
</package>
