<package>
  <name>test_nodelet</name>
  <version>1.9.9</version>
  <description>
    A package for nodelet unit tests
  </description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/test_nodelet</url>
  <url type="bugtracker">https://github.com/ros/nodelet_core/issues</url>
  <url type="repository">https://github.com/ros/nodelet_core</url>
  <author>Tully Foote</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>rosbash</test_depend>

  <export>
    <nodelet plugin="${prefix}/test_nodelet.xml"/>
  </export>
</package>
