<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>test_nodelet</name>
  <version>1.10.0</version>
  <description>
    A package for nodelet unit tests
  </description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/test_nodelet</url>
  <url type="bugtracker">https://github.com/ros/nodelet_core/issues</url>
  <url type="repository">https://github.com/ros/nodelet_core</url>
  <author>Tully Foote</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>rostest</depend>
  <depend>std_msgs</depend>

  <test_depend>rosbash</test_depend>

  <export>
    <nodelet plugin="${prefix}/test_nodelet.xml"/>
  </export>
</package>
